--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "inquirer": "^6.2.2",
     "libnpmsearch": "^2.0.0",
     "libnpx": "^10.2.0",
+    "suppose": "^0.6.2",
     "which": "^1.3.1"
   },
   "devDependencies": {
